--- a/singer.html
+++ b/singer.html
@@ -11,7 +11,7 @@
         <div id="sp2"> 
             <p  align="center" style="color: #a2c4c9; ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;►
                 <span style="color:white">SINGER</span>   
-                <a href="index.html"><img align="right" style="align-self: top;" src="logo.jpg" alt="logo" height="5%" width="15%"></a>
+                <a href="index.html"><img align="right" style="align-self: top;" src="logo.jpg" alt="logo" width="18%"></a>
             </p>   
          </div>
             <hr>
